--- a/smtcl_erp/WebRoot/WEB-INF/web.xml
+++ b/smtcl_erp/WebRoot/WEB-INF/web.xml
@@ -39,7 +39,21 @@
 	<listener>
     	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   	</listener>
+  	
+    <servlet>
+		<servlet-name>CXFServlet</servlet-name>
+		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+	
+	<load-on-startup>1</load-on-startup>
+	</servlet>
+	
+	<servlet-mapping>
+	    <servlet-name>CXFServlet</servlet-name>
+		<url-pattern>/ServiceServer/*</url-pattern>
+	</servlet-mapping>
+	
   	<context-param>
+ 
   	<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/applicationContext.xml</param-value>
   	</context-param>
