date：2017-2-21 20:47 name：guofeng 内容： 1.页面修复bug，主页图形不超出边框 2.登录功能已完成，可使用，目前登录密码没有加密，正式使用时可修改MD5加密； 3.新增拦截器，WEB.XML部分修改

--- a/smtcl_erp/WebRoot/WEB-INF/web.xml
+++ b/smtcl_erp/WebRoot/WEB-INF/web.xml
@@ -5,11 +5,23 @@
 		<!-- 参数名 -->
 		<param-name>company</param-name>
 		<!-- 参数值 -->
-		<param-value>沈阳机床上海分院立体库管理系统</param-value>
+		<param-value>沈阳机床云科智能制造缓存库管理系统</param-value>
 	</context-param>
+	<filter>
+        <filter-name>SessionFilter</filter-name>
+        <filter-class>com.sygf.erp.util.SessionFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SessionFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 	<session-config>
-		<session-timeout>-1</session-timeout>
+		<session-timeout>1</session-timeout>
 	</session-config>
+	<error-page>  
+    	<error-code>404</error-code>  
+    	<location>/httpLogin.jsp</location>  
+  	</error-page>
 	<servlet>
 		<servlet-name>action</servlet-name>
 		<servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
@@ -31,31 +43,23 @@
 	    <servlet-name>action</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
-   
 	<welcome-file-list>
 		<welcome-file>/httpLogin.jsp</welcome-file>
 	</welcome-file-list>  
-	
 	<listener>
     	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   	</listener>
-  	
     <servlet>
 		<servlet-name>CXFServlet</servlet-name>
 		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-	
-	<load-on-startup>0</load-on-startup>
+		<load-on-startup>0</load-on-startup>
 	</servlet>
-	
 	<servlet-mapping>
 	    <servlet-name>CXFServlet</servlet-name>
 		<url-pattern>/ServiceServer/*</url-pattern>
 	</servlet-mapping>
-	
   	<context-param>
- 
-  	<param-name>contextConfigLocation</param-name>
+  		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/applicationContext.xml,/WEB-INF/alai.xml</param-value>
   	</context-param>
-  	
 </web-app>
